[package]
name = "circuit-watcher"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
sysinfo = "0.29.2"
regex = "1.8.3"
winapi = { version = "0.3", features = ["winuser"] }
futures-util = "0.3.26"
reqwest = { version = "0.11.18", features = ["json"] }
native-tls = "0.2.11"
futures = "0.3.28"
http = "0.2.9"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
league-client-connector = "0.1.2"
tungstenite = "0.19.0"
chrono = "0.4.26"
serde = "1.0"
serde_json = "1.0"


[profile.release]
opt-level = 3
lto = true
