[package]
name = "circuit-watcher"
version = "2.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"]}
tokio = { version = "1.28.2", features = ["full"]}
winapi = { version = "0.3", features = ["wincon", "winuser"]}
egui_extras = { version = "0.22.0", features = ["image"]}
league-client-connector = { path="" }
native-tls = "0.2.11"
eframe = "0.22.0"
egui = "0.22.0"
serde = "1.0"
serde_json = "1.0"
http = "0.2.9"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
lto = true
